* fix issue with removing downloaded zip files.

--- a/PL/11_Sieci_rekurencyjne_2.ipynb
+++ b/PL/11_Sieci_rekurencyjne_2.ipynb
@@ -58,8 +58,8 @@
     "         'ytick.labelsize':'xx-large'}\n",
     "plt.rcParams.update(params) \n",
     "\n",
-    "import os\n",
-    "os.chdir(\"/scratch_hdd/akalinow/Zajecia/2023-2024/Lato/Uczenie_maszynowe_2/UczenieMaszynoweII/PL/\")\n",
+    "#import os\n",
+    "#os.chdir(\"/scratch_hdd/akalinow/Zajecia/2023-2024/Lato/Uczenie_maszynowe_2/UczenieMaszynoweII/PL/\")\n",
     "\n",
     "#append path with python modules\n",
     "import importlib\n",
@@ -315,12 +315,10 @@
     "Napisać funkcję `makeDataset(df, sequenceColumns, window_size, scale)` która przyjmuje obiekt `pandas.DataFrame` i zwraca obiekt `tf.Data.Dataset`.\n",
     "Funkcja wykonuje następujące przekształcenia:\n",
     "\n",
-    "* dzieli dane na ciągu zliczeń z `window_size` dni\n",
+    "* dzieli dane na ciągi zliczeń z `window_size` dni\n",
     "* normalizuje zliczenia o czynnik `1/scale`\n",
     "* dzieli wiersze na `etykiety`: zliczenia z ostatniego dnia i `cechy`: zliczenia z wcześniejszych `window_size-1` dni\n",
     "* dzieli zbiór na paczki o rozmiarze `16` i zachowuje go w pamięci podręcznej\n",
-    "* wypisać na ekran cztery przykłady\n",
-    "\n",
     "\n",
     "**Wskazówki:**\n",
     "* macierz danych z kolumny zbioru pandas można wyłuskać jako `df[...].values` lub podać po prostu `df[...]`\n",
@@ -378,7 +376,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "Korzystając z funkcji `makeDataset(...)` proszę:\n",
     "\n",
@@ -395,7 +399,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -428,6 +438,7 @@
     "window_size = 32\n",
     "scale = 10_000\n",
     "\n",
+    "#BEGIN_SOLUTION\n",
     "train_sequence_Columns = [train_street]\n",
     "minTrainDate = datetime.date(2017, 1, 1)\n",
     "maxTrainDate = datetime.date(2020, 12, 31)\n",
@@ -807,11 +818,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": ""
     },
     "tags": []
    },
@@ -820,65 +831,86 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "--2024-05-23 07:47:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2016/2016_566_s.zip\n",
+      "--2024-06-11 14:54:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2016/2016_566_s.zip\n",
       "Resolving danepubliczne.imgw.pl (danepubliczne.imgw.pl)... 91.220.17.226\n",
       "Connecting to danepubliczne.imgw.pl (danepubliczne.imgw.pl)|91.220.17.226|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 15456 (15K) [application/zip]\n",
-      "Saving to: ‘ ../data/Pogoda/2016_566_s.zip.11’\n",
+      "Saving to: ‘../data/Pogoda/2016_566_s.zip.1’\n",
       "\n",
-      "     0K .......... .....                                      100%  428M=0s\n",
+      "     0K .......... .....                                      100% 8.70M=0.002s\n",
       "\n",
-      "2024-05-23 07:47:16 (428 MB/s) - ‘ ../data/Pogoda/2016_566_s.zip.11’ saved [15456/15456]\n",
+      "2024-06-11 14:54:16 (8.70 MB/s) - ‘../data/Pogoda/2016_566_s.zip.1’ saved [15456/15456]\n",
       "\n",
-      "--2024-05-23 07:47:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2017/2017_566_s.zip\n",
+      "--2024-06-11 14:54:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2017/2017_566_s.zip\n",
       "Resolving danepubliczne.imgw.pl (danepubliczne.imgw.pl)... 91.220.17.226\n",
       "Connecting to danepubliczne.imgw.pl (danepubliczne.imgw.pl)|91.220.17.226|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 15579 (15K) [application/zip]\n",
-      "Saving to: ‘ ../data/Pogoda/2017_566_s.zip.11’\n",
+      "Saving to: ‘../data/Pogoda/2017_566_s.zip.1’\n",
       "\n",
-      "     0K .......... .....                                      100% 3.91M=0.004s\n",
+      "     0K .......... .....                                      100% 6.28M=0.002s\n",
       "\n",
-      "2024-05-23 07:47:16 (3.91 MB/s) - ‘ ../data/Pogoda/2017_566_s.zip.11’ saved [15579/15579]\n",
+      "2024-06-11 14:54:16 (6.28 MB/s) - ‘../data/Pogoda/2017_566_s.zip.1’ saved [15579/15579]\n",
       "\n",
-      "--2024-05-23 07:47:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2018/2018_566_s.zip\n",
+      "--2024-06-11 14:54:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2018/2018_566_s.zip\n",
       "Resolving danepubliczne.imgw.pl (danepubliczne.imgw.pl)... 91.220.17.226\n",
       "Connecting to danepubliczne.imgw.pl (danepubliczne.imgw.pl)|91.220.17.226|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 15129 (15K) [application/zip]\n",
-      "Saving to: ‘ ../data/Pogoda/2018_566_s.zip.11’\n",
+      "Saving to: ‘../data/Pogoda/2018_566_s.zip.1’\n",
       "\n",
-      "     0K .......... ....                                       100% 2.38M=0.006s\n",
+      "     0K .......... ....                                       100%  299M=0s\n",
       "\n",
-      "2024-05-23 07:47:16 (2.38 MB/s) - ‘ ../data/Pogoda/2018_566_s.zip.11’ saved [15129/15129]\n",
+      "2024-06-11 14:54:16 (299 MB/s) - ‘../data/Pogoda/2018_566_s.zip.1’ saved [15129/15129]\n",
       "\n",
-      "--2024-05-23 07:47:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2019/2019_566_s.zip\n",
+      "--2024-06-11 14:54:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2019/2019_566_s.zip\n",
       "Resolving danepubliczne.imgw.pl (danepubliczne.imgw.pl)... 91.220.17.226\n",
       "Connecting to danepubliczne.imgw.pl (danepubliczne.imgw.pl)|91.220.17.226|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 15001 (15K) [application/zip]\n",
-      "Saving to: ‘ ../data/Pogoda/2019_566_s.zip.11’\n",
+      "Saving to: ‘../data/Pogoda/2019_566_s.zip.1’\n",
       "\n",
-      "     0K .......... ....                                       100% 7.90M=0.002s\n",
+      "     0K .......... ....                                       100% 7.75M=0.002s\n",
       "\n",
-      "2024-05-23 07:47:16 (7.90 MB/s) - ‘ ../data/Pogoda/2019_566_s.zip.11’ saved [15001/15001]\n",
+      "2024-06-11 14:54:16 (7.75 MB/s) - ‘../data/Pogoda/2019_566_s.zip.1’ saved [15001/15001]\n",
       "\n",
-      "--2024-05-23 07:47:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2020/2020_566_s.zip\n",
+      "--2024-06-11 14:54:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2020/2020_566_s.zip\n",
       "Resolving danepubliczne.imgw.pl (danepubliczne.imgw.pl)... 91.220.17.226\n",
       "Connecting to danepubliczne.imgw.pl (danepubliczne.imgw.pl)|91.220.17.226|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 14965 (15K) [application/zip]\n",
-      "Saving to: ‘ ../data/Pogoda/2020_566_s.zip.11’\n",
+      "Saving to: ‘../data/Pogoda/2020_566_s.zip.1’\n",
       "\n",
-      "     0K .......... ....                                       100% 2.11M=0.007s\n",
+      "     0K .......... ....                                       100% 6.53M=0.002s\n",
       "\n",
-      "2024-05-23 07:47:16 (2.11 MB/s) - ‘ ../data/Pogoda/2020_566_s.zip.11’ saved [14965/14965]\n",
+      "2024-06-11 14:54:16 (6.53 MB/s) - ‘../data/Pogoda/2020_566_s.zip.1’ saved [14965/14965]\n",
       "\n",
-      "--2024-05-23 07:47:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2021/2021_566_s.zip\n",
+      "--2024-06-11 14:54:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2021/2021_566_s.zip\n",
       "Resolving danepubliczne.imgw.pl (danepubliczne.imgw.pl)... 91.220.17.226\n",
       "Connecting to danepubliczne.imgw.pl (danepubliczne.imgw.pl)|91.220.17.226|:443... connected.\n",
-      "HTTP request sent, awaiting response... "
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 15406 (15K) [application/zip]\n",
+      "Saving to: ‘../data/Pogoda/2021_566_s.zip.1’\n",
+      "\n",
+      "     0K .......... .....                                      100% 5.54M=0.003s\n",
+      "\n",
+      "2024-06-11 14:54:16 (5.54 MB/s) - ‘../data/Pogoda/2021_566_s.zip.1’ saved [15406/15406]\n",
+      "\n",
+      "--2024-06-11 14:54:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2022/2022_566_s.zip\n",
+      "Resolving danepubliczne.imgw.pl (danepubliczne.imgw.pl)... 91.220.17.226\n",
+      "Connecting to danepubliczne.imgw.pl (danepubliczne.imgw.pl)|91.220.17.226|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 15629 (15K) [application/zip]\n",
+      "Saving to: ‘../data/Pogoda/2022_566_s.zip.1’\n",
+      "\n",
+      "     0K .......... .....                                      100% 7.79M=0.002s\n",
+      "\n",
+      "2024-06-11 14:54:16 (7.79 MB/s) - ‘../data/Pogoda/2022_566_s.zip.1’ saved [15629/15629]\n",
+      "\n",
+      "--2024-06-11 14:54:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2023/2023_566_s.zip\n",
+      "Resolving danepubliczne.imgw.pl (danepubliczne.imgw.pl)... 91.220.17.226\n",
+      "Connecting to danepubliczne.imgw.pl (danepubliczne.imgw.pl)|91.220.17.226|:443... connected.\n"
      ]
     },
     {
@@ -906,52 +938,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "200 OK\n",
-      "Length: 15406 (15K) [application/zip]\n",
-      "Saving to: ‘ ../data/Pogoda/2021_566_s.zip.11’\n",
-      "\n",
-      "     0K .......... .....                                      100%  342M=0s\n",
-      "\n",
-      "2024-05-23 07:47:16 (342 MB/s) - ‘ ../data/Pogoda/2021_566_s.zip.11’ saved [15406/15406]\n",
-      "\n",
-      "--2024-05-23 07:47:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2022/2022_566_s.zip\n",
-      "Resolving danepubliczne.imgw.pl (danepubliczne.imgw.pl)... 91.220.17.226\n",
-      "Connecting to danepubliczne.imgw.pl (danepubliczne.imgw.pl)|91.220.17.226|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 15629 (15K) [application/zip]\n",
-      "Saving to: ‘ ../data/Pogoda/2022_566_s.zip.11’\n",
-      "\n",
-      "     0K .......... .....                                      100%  474M=0s\n",
-      "\n",
-      "2024-05-23 07:47:16 (474 MB/s) - ‘ ../data/Pogoda/2022_566_s.zip.11’ saved [15629/15629]\n",
-      "\n",
-      "--2024-05-23 07:47:16--  https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/2023/2023_566_s.zip\n",
-      "Resolving danepubliczne.imgw.pl (danepubliczne.imgw.pl)... 91.220.17.226\n",
-      "Connecting to danepubliczne.imgw.pl (danepubliczne.imgw.pl)|91.220.17.226|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 15256 (15K) [application/zip]\n",
-      "Saving to: ‘ ../data/Pogoda/2023_566_s.zip.11’\n",
+      "Saving to: ‘../data/Pogoda/2023_566_s.zip.1’\n",
       "\n",
-      "     0K .......... ....                                       100% 6.39M=0.002s\n",
+      "     0K .......... ....                                       100% 10.2M=0.001s\n",
       "\n",
-      "2024-05-23 07:47:16 (6.39 MB/s) - ‘ ../data/Pogoda/2023_566_s.zip.11’ saved [15256/15256]\n",
+      "2024-06-11 14:54:16 (10.2 MB/s) - ‘../data/Pogoda/2023_566_s.zip.1’ saved [15256/15256]\n",
       "\n",
-      "replace  ../data/Pogoda/s_d_566_2022.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename:  NULL\n",
+      "replace ../data/Pogoda/s_d_566_2022.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename:  NULL\n",
       "(EOF or read error, treating as \"[N]one\" ...)\n",
       "\n",
       "7 archives were successfully processed.\n",
-      "1 archive had warnings but no fatal errors.\n",
-      "rm: invalid option -- ' '\n",
-      "Try 'rm --help' for more information.\n"
+      "1 archive had warnings but no fatal errors.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args=['rm', '-f ../data/Pogoda/*zip'], returncode=1)"
+       "CompletedProcess(args=['rm', '-f', '../data/Pogoda/*zip'], returncode=0)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,13 +970,14 @@
     "# dowlnoad data\n",
     "for year in range(2016, 2024):\n",
     "    url = f\"https://danepubliczne.imgw.pl/data/dane_pomiarowo_obserwacyjne/dane_meteorologiczne/dobowe/synop/{year}/{year}_566_s.zip\"\n",
-    "    subprocess.run([\"wget\", url, \"-P ../data/Pogoda/\"])\n",
+    "    subprocess.run([\"wget\", url, \"-P\", \"../data/Pogoda/\"])\n",
     "\n",
     "# unzip data\n",
-    "subprocess.run([\"unzip\",\"../data/Pogoda/*_566_s.zip\", \"-d ../data/Pogoda/\"])\n",
+    "subprocess.run([\"unzip\",\"../data/Pogoda/*_566_s.zip\", \"-d\",\"../data/Pogoda/\"])\n",
     "\n",
     "#remove zip archives\n",
-    "subprocess.run([\"rm\",\"-f ../data/Pogoda/*zip\"])"
+    "#file list expansion from * dos not work with subprocess\n",
+    "!rm -f ../data/Pogoda/*zip*"
    ]
   },
   {
@@ -2666,7 +2675,13 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# add day of week to data\n",
@@ -2679,7 +2694,13 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2827,7 +2848,13 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2929,7 +2956,13 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -3086,7 +3119,13 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# prepare plotting function\n",
@@ -3162,7 +3201,13 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
