* fix homework 10 description

--- a/PL/10_Sieci_rekurencyjne_1.ipynb
+++ b/PL/10_Sieci_rekurencyjne_1.ipynb
@@ -1415,12 +1415,16 @@
     "tags": []
    },
    "source": [
-    "* przeprowadzić trening modelu LSTM przewidującego wartość ostatniego elementu ciągu na podstawie wcześniejszych `[:-3]` elementów\n",
-    "* narysować rysunek z dwoma polami:\n",
+    "* przeprowadzić trening modelu LSTM przewidującego wartość ostatniego elementu ciągu na podstawie wcześniejszych `[:-3]` elementów sekwensji\n",
+    "\n",
+    "* narysować rysunek z trzema polami:\n",
     "  * prawdziwa wartość: `y`, przewidziana wartość: `y_pred`, \n",
     "    wartość przed ostatniego elementu zwrócona jako wartość następnego elementu: `y_naive`\n",
-    "  * stosunki `(y-y_pred)/y`, `(y_naive-y)/y` (na jednym rysunku)  \n",
-    "* w czasie rysowania zwrócić uwagę na synchronizację elementów `y` i `y_pred`"
+    "  * stosunki `(y-y_pred)/y`, `(y_naive-y)/y` (na jednym rysunku)\n",
+    "  * histogramy `(y-y_pred)/y`, `(y_naive-y)/y` (na jednym rysunku)\n",
+    "* w czasie rysowania zwrócić uwagę na synchronizację elementów `y` i `y_pred`\n",
+    "\n",
+    "* `y_pred` obliczyć na podstawie coraz dłuższych sekwencji zawierających wszystkie elementy od wartości `0` to aktualnej wartości `x`, począwszy od sekwencji o długości `1`."
    ]
   },
   {
